test/asm/label-outside-section.err
error: Label `bad` created outside of a `SECTION`
    at label-outside-section.asm(1)
Assembly aborted with 1 error
